# headroom

./: .gitignore  .release-please-config.json  CHANGELOG.md  FAQ-zh.md  FORK-SYNC-WARNING.md  Home.md  Python-SDK-zh.md  Quickstart-zh.md  README-zh.md  README.md  docker-compose.yml  headroom-config-guide.md  nginx-headroom-monitor-only.conf  pyproject.toml  sitemap.xml
Home/: index.html
agent-evals/: .gitignore  Makefile  README.md  pyproject.toml
agent-evals/src/agent_evals/: __init__.py  arms.py  cli.py  config.py  logging.py  manifest.py  models.py  orchestrator.py  protocols.py
agent-evals/src/agent_evals/benchmarks/: __init__.py
agent-evals/src/agent_evals/harnesses/: __init__.py
agent-evals/src/agent_evals/judge/: __init__.py
agent-evals/src/agent_evals/metrics/: __init__.py  savings.py
agent-evals/src/agent_evals/probes/: __init__.py
agent-evals/src/agent_evals/report/: __init__.py  scorecard.py
agent-evals/src/agent_evals/stats/: __init__.py
agent-evals/tests/: conftest.py  test_arms.py  test_config.py  test_integration_phase0.py  test_live_integration.py  test_manifest.py  test_models.py  test_orchestrator.py  test_savings.py  test_scorecard.py
cli/: index.html
headroom/: config.py  parser.py  release_version.py
metrics/: index.html
proxy/: index.html
scripts/: pr-governance.py
search/: search_index.json
tests/: conftest.py  test_anthropic_pre_upstream_backpressure.py  test_audit_reads.py  test_canonical_pipeline.py  test_ccr_context_tracker.py  test_ccr_row_drop_store_bridge.py  test_cli_proxy_env.py  test_cli_proxy_improvements.py  test_content_router_exclude_tools.py  test_content_router_tool_role_reversibility.py  test_gemini_compression_offload.py  test_graph_tokensave.py  test_kompress_must_keep.py  test_mcp_registry_opencode.py  test_mid_turn_steering.py  test_models.py  test_openai_codex_routing.py  test_output_savings.py  test_parser.py  test_perf_cli_filtering.py  test_pricing.py  test_provider_copilot_wrap.py  test_provider_model_fallback.py  test_provider_proxy_routes.py  test_providers_opencode_config.py  test_providers_opencode_install.py  test_proxy_cache_ttl_metrics.py  test_proxy_ccr.py  test_proxy_compress_endpoint.py  test_proxy_dashboard_stats_cache.py  (+12 more)
(+105 files in other folders)
